# oc-da-python-p12

./: .coveragerc  .env_sample  .gitignore  README.md  bootstrap.py  main.py  pyproject.toml  requirements.txt  sample_db.py
app/repository/models/: client.py  collaborator.py  contract.py  event.py
models/: models.py
src/: __init__.py
src/domain/entities/: client.py  collaborator.py  contract.py  event.py
src/domain/interfaces/: client_repository_interface.py  collaborator_repository_interface.py  commercial_repository_interface.py  contract_repository_interface.py  event_repository_interface.py  manager_repository_interface.py  support_repository_interface.py
src/domain/permissions/: collaborator_permission.py
src/domain/use_cases/: manage_collaborator.py  manage_commercial.py  manage_manager.py  manage_support.py
src/infrastructure/cli/: admin_command.py  commercial_command.py  main_menu.py  manager_command.py  support_command.py
src/infrastructure/helpers/: get_token_payload.py  remove_token.py  validators.py
src/infrastructure/repository/: abstract_repository.py  client_repository.py  collaborator_repository.py  commercial_repository.py  contract_repository.py  event_repository.py  manager_repository.py  support_repository.py
src/infrastructure/services/: database_connect.py  get_token_payload.py
src/infrastructure/views/: cli.py
tests/: conftest.py
tests/unit_tests/domain/entities/: test_client.py  test_collaborator.py  test_contract.py  test_event.py
tests/unit_tests/models/: test_client.py  test_contract.py  test_event.py
(+10 files in other folders)
